<resources>
    <string name="app_name">RichMansCalc</string>

    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>

    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>

    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Parentheses">()</string>
    <string name="Equal">=</string>

    <string name="Point">.</string>
    <string name="PlusMinus">+/_</string>
    <string name="Exponent">^</string>
    <string name="Clear">C</string>

    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Multiplication">×</string>
    <string name="Division">÷</string>

    <string name="Backspace">DEL</string>
    
    <string name="Display">Enter an expression </string>
</resources>